# kuarcers

./: CMakeLists.txt  README.md
src/: main.c  meshGen.c
src/include/: game.h
